Fixed issues with gaps

--- a/style.css
+++ b/style.css
@@ -149,8 +149,7 @@ h2 {
   margin: 16px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 2rem;
+  justify-content: space-evenly;
 }
 
 #sevengoals img {
